--- a/gallery/index.html
+++ b/gallery/index.html
@@ -44,21 +44,29 @@ body {
 
 
 .slide:first-child {
-  background: url("1.png") no-repeat
+  background: url("구매하러가기2.PNG") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+  background: url("구매하러가기4.PNG") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("빌링결제3.PNG") no-repeat
+    center top/cover;
+}
+  
+.slide:nth-child(4) {
+  background: url("빌링결제4.PNG") no-repeat
     center top/cover;
 }
 
-
+  .slide:nth-child(5) {
+  background: url("빌링결제5.PNG") no-repeat
+    center top/cover;
+}
 .buttons button#prev {
   position: absolute;
   top: 50%;
